# example-calculator

./: earn.yaml  makefile  pyproject.toml
src/: calculator.py  interface.py
test/: conftest.py  test_calculator.py
